2010-08-29  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_mb_encoding, avt_set_title, avt_initialize, avt_quit):
	make the title/shortname depend on avt_mb_encoding

2010-08-25  Andreas K. Foerster  <info@akfoerster.de>

	* filechooser.c (marked_line): new macro
	* colorchooser.c (marked_line): new macro

2010-08-19  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm, avt_load_image_xbm):
	handle transparency differently

	* avatar.c (avt_initialize, avt_change_avatar_image):
	don't add alpha channel to images with color-key transparency
	(optimization)

2010-08-16  Andreas K. Foerster  <info@akfoerster.de>

	* avtar.c (avt_normal_text): switch markup mode off

2010-08-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_ask): fix: clear the input field

2010-08-05  Andreas K. Foerster  <info@akfoerster.de>

	* avtinternals.h: new file

2010-08-04  Andreas K. Foerster  <info@akfoerster.de>

	* avtgrmsg.c: new file
	(avtmsg.c, mingw/avtmsg.c): adapted

	* mingw/avtmsg.c: made more secure

2010-07-27  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_free_audio):
	if the sound is currently playing, stop it immediately!

2010-07-24  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (say_line): eliminate outdated code
	(process_script): use avt_markup

2010-07-23  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_markup): new function
	(avt_put_character, avt_tell, avt_initialize): adapted
	avt_markup was named avt_wikisyntax for a short time

2010-07-21  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (bell): new macro

2010-07-18  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_get_key):
	map some function keys to unicode chars in the reserved area

	* avatar.c (avt_ask):
	support full line editing

	* avatar.c (avt_tell, avt_tell_mb): new functions

2010-07-16  Andreas K. Foerster  <info@akfoerster.de>
