@@ -4,6 +4,8 @@
   - ./configure --disable-lua to buld without Lua
   - text-input has full line-editing features
   - fix: on text input the input area gets cleared
+  - title can have international characters if avt_mb_encoding is
+    called before avt_initialize
   - the pager can handle binary junk better
   - filechooser: path can be entered manually
   - filechooser: on windows ask for drive letter only when
